--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: Willian Justen - Desenvolvedor Front End
-email: willianjustenqui@gmail.com
+title: Leandro Mundim
+email: leandroresendemundim@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Um blog de um desenvolvedor Front End e entusiasta de novas tecnologias.
+  Um canal de cursos livres.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://willianjusten.com.br" # the base hostname & protocol for your site
-twitter_username: willian_justen
-github_username:  willianjusten
+url: "https://leandromundim.github.io" # the base hostname & protocol for your site
+twitter_username: drmundim
+github_username:  drmundim
 
 # Build settings
 markdown: kramdown
