--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 # Site settings
-title: Leandro Mundim
+title: Leandro R. Mundim
+description: Plataforma de cursos
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://leandromundim.github.io" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+
+# User settings
+username: Leandro R. Mundim
+user_description: Pesquisador e professor
 email: leandroresendemundim@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Um canal de cursos livres.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://leandromundim.github.io" # the base hostname & protocol for your site
 twitter_username: drmundim
 github_username:  drmundim
 
@@ -24,19 +27,14 @@ compress_html:
 # Links to include in menu navigation
 # For external links add external: true
 links:
-  - title: Home
+  - title: Inicial
     url: /
-  - title: Cursos
-    url: /cursos
-  - title: Séries
+  - title: Series
     url: /series
   - title: Tags
     url: /tags
   - title: Sobre mim
-    url: /about
-
-collections:
-  - cursos
+    url: /about/
 
 # exclude my node related stuff
-exclude: ['package.json', 'src', 'node_modules', 'vendor/bundle/ruby']
+exclude: ['package.json', 'src', 'node_modules']
