--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Leandro R. Mundim
+title: Leandro Mundim
 email: leandroresendemundim@gmail.com
 description: Plataforma de cursos
 baseurl: "" 
