--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:  Mundim da Educação
 email: leandroresendemundim@gmail.com
 description: > #lrm
   Plataforma de cursos
-baseurl: "" 
+baseurl: "/leandromundim" 
 url: "https://leandromundim.com" 
 twitter_username: drmundim
 github_username:  drmundim
